new list component added

--- a/src/Components/PracticeLists/AddList/AddList.css
+++ b/src/Components/PracticeLists/AddList/AddList.css
@@ -10,3 +10,11 @@
   padding: 0.5rem 1rem;
   border-radius: 0.4rem;
 }
+
+.add-list-item-wrapper-selected {
+  background-color: rgba(150, 240, 188, 0.6);
+  width: 60%;
+  margin: 1rem 0;
+  padding: 0.5rem 1rem;
+  border-radius: 0.4rem;
+}
