--- a/src/Components/PracticeLists/Item/Item.css
+++ b/src/Components/PracticeLists/Item/Item.css
@@ -22,3 +22,23 @@
 .item-info {
   font-size: 0.7rem;
 }
+
+.modal-list-main-wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
+.modal-list-item-wrapper {
+  background-color: rgba(117, 128, 145, 0.6);
+  margin: 0.6rem 0;
+  border-radius: 0.4rem;
+  padding: 0.4rem;
+  width: 60%;
+  display: flex;
+  flex-direction: row;
+}
+
+.timer-wrapper-main {
+  display: flex;
+  flex-direction: column;
+}
