--- a/src/Components/SessionView/SessionComponents/ItemsList/ItemsList.css
+++ b/src/Components/SessionView/SessionComponents/ItemsList/ItemsList.css
@@ -3,24 +3,26 @@
   flex-direction: column;
   align-items: center;
 
-  background-color: rgba(117, 128, 145, 1);
-  margin: 0 15rem;
+  background-color: #cccccc;
+  margin: 1rem 1rem;
   padding: 1rem 2rem 1rem;
   border-radius: 15px;
-  color: white;
+  box-shadow: 2px 4px 4px #00000049;
 }
 
 h3 {
-  border-bottom: 1px solid;
   padding: 0 1rem;
+  color: #4f5d75;
 }
 
 .itemWrapper {
-  background-color: rgba(175, 191, 216, 0.6);
-  margin: 1rem 2rem;
+  background-color: #7099a5;
+  margin: 1rem 0.3rem;
   border-radius: 0.4rem;
   display: flex;
   justify-content: center;
   padding: 0.4rem 2rem;
   color: black;
+  font-size: 14px;
+  box-shadow: 2px 2px 3px #46464649;
 }
