--- a/src/Components/SessionView/SessionComponents/Timer/Timer.css
+++ b/src/Components/SessionView/SessionComponents/Timer/Timer.css
@@ -1,3 +1,8 @@
+.timer-components-wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
 .timerContainer {
   display: flex;
   flex-direction: column;
@@ -15,7 +20,7 @@
   align-items: center;
   background-color: rgba(196, 196, 196, 0.2);
   padding: 2rem;
-  margin: 2rem 15rem;
+
   font-size: 4.4rem;
   border-radius: 15px;
 }
@@ -27,7 +32,7 @@
 .startButton {
   width: 25%;
   align-self: center;
-  font-size: 2rem;
+  font-size: 1rem;
   border-radius: 15px;
   border: none;
   color: white;
@@ -41,11 +46,21 @@
 .stopButton {
   width: 25%;
   align-self: center;
-  font-size: 2rem;
+  font-size: 1rem;
   border-radius: 15px;
   border: none;
   color: white;
   background-color: rgb(180, 52, 52);
+}
+
+.showMetronome {
+  width: 25%;
+  align-self: center;
+  font-size: 1rem;
+  border-radius: 15px;
+  border: none;
+  color: white;
+  background-color: rgb(42, 157, 143);
 }
 
 .backToDash {
